--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+remappings = [
+    "forge-std/=lib/forge-std/src/",
+    "reactive-lib/=lib/reactive-lib/src/"
+]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
