--- a/foundry.toml
+++ b/foundry.toml
@@ -3,9 +3,17 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+fallback_oz = true
+is_system = false # Note: NonceHolder and the ContractDeployer system contracts can only be called with a special is_system flag as true
+mode = "3"
+
 remappings = [
     "forge-std/=lib/forge-std/src/",
     "reactive-lib/=lib/reactive-lib/src/"
 ]
+
+[etherscan]
+abstractTestnet = { chain = "11124", url = "https://api-sepolia.abscan.org/api", key = "TACK2D1RGYX9U7MC31SZWWQ7FCWRYQ96AD"}
+abstractMainnet = { chain = "2741", url = "https://api.abscan.org/api", key = ""}
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
